...
  }) async {
    try {
      final UserCredential userCredential = await _auth
          .signInWithEmailAndPassword(email: email, password: password);
      return userCredential.user;
    } on FirebaseAuthException {
      throw 'Email atau password salah.';
    }
  }

  // 2. Register User dengan Secondary Auth Instance
  Future<UserModel> registerUser({
    required String email,
...
