...
              Positioned(
                top: 10,
                right: 20,
                child: TextButton(
                  onPressed: () => _skipOnboarding(context),
                  child: Text(
                    'SKIP',
                    style: TextStyle(
                        color: Colors.grey.shade600,
                        fontSize: 16,
                        fontWeight: FontWeight.w600),
                  ),
                ),
...
